sass/master.css
.wrapper {
  height: 100vh;
  max-height: 1936px;
  width: 100%;
  background-image: url("../img/bg.png");
  background-position: center 30%;
}

header {
  width: 100%;
  background-color: blue;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

header nav {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 7% 3fr 1fr 1fr 7%;
  grid-template-columns: 7% 3fr 1fr 1fr 7%;
  -ms-grid-rows: 47px 47px;
  grid-template-rows: 47px 47px;
  grid-gap: 3px;
  width: 100%;
}

header nav .brand {
  -ms-grid-column: 2;
  grid-column-start: 2;
  grid-column-end: 3;
  -ms-grid-row: 1;
  grid-row-start: 1;
  grid-row-end: 4;
}

header nav .block,
header nav .brand,
header nav .nav-item {
  background-color: pink;
}

header nav .exhibitions {
  -ms-grid-column: 3;
  grid-column-start: 3;
  grid-column-end: 4;
}

header nav .work {
  -ms-grid-column: 4;
  grid-column-start: 4;
  grid-column-end: 5;
}

header nav .about {
  -ms-grid-column: 4;
  grid-column-start: 4;
  grid-column-end: 5;
  -ms-grid-row: 2;
  grid-row-start: 2;
  grid-row-end: 4;
}

header nav .contact {
  -ms-grid-column: 3;
  grid-column-start: 3;
  grid-column-end: 4;
  -ms-grid-row: 2;
  grid-row-start: 2;
  grid-row-end: 4;
}

header nav .block {
  -ms-grid-row: 1;
  grid-row-start: 1;
  grid-row-end: 4;
}

footer {
  width: 100%;
  display: -ms-grid;
  display: grid;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: grey;
  -ms-grid-columns: 7% (1fr)[5] 7%;
  grid-template-columns: 7% repeat(5, 1fr) 7%;
  -ms-grid-rows: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
}

.bumper {
  width: 100%;
  height: 20px;
  background-color: gray;
}

.book-now {
  text-align: center;
  border: 2px solid grey;
}

.body-background {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.body-background .container {
  width: 86%;
  display: -ms-grid;
  display: grid;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -ms-flex-pack: distribute;
  justify-content: space-around;
  background-color: gray;
  -ms-grid-rows: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  -ms-grid-columns: (1fr)[5];
  grid-template-columns: repeat(5, 1fr);
  grid-gap: 15px;
  padding: 15px;
}

.body-background .container .big-block {
  display: -ms-grid;
  display: grid;
  -ms-grid-rows: 387px 96px 46px;
  grid-template-rows: 387px 96px 46px;
  -ms-grid-columns: 80px 1fr;
  grid-template-columns: 80px 1fr;
  overflow: hidden;
  background-color: white;
}

.body-background .container .big-block .image img {
  width: 100%;
}

.body-background .container #first {
  -ms-grid-column: 1;
  -ms-grid-column-span: 3;
  grid-column: 1 / 4;
}

.body-background .container #fourth {
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  grid-column: 3 / 6;
}

.body-background .container .header {
  -ms-grid-row: 1;
  grid-row-start: 1;
  grid-row-end: 4;
}

.body-background .container .header p {
  -webkit-writing-mode: vertical-lr;
  -ms-writing-mode: tb-lr;
  writing-mode: vertical-lr;
  -webkit-transform: rotate(180deg);
  transform: rotate(180deg);
}

.body-background .container .image {
  overflow: hidden;
}

.body-background .container .small-block {
  display: -ms-grid;
  display: grid;
  -ms-grid-rows: 386px 96px 46px;
  grid-template-rows: 386px 96px 46px;
  -ms-grid-columns: 80px 1fr;
  grid-template-columns: 80px 1fr;
  overflow: hidden;
  background-color: white;
}

.body-background .container .small-block .image img {
  width: 100%;
}

.body-background .container #second {
  -ms-grid-column: 4;
  -ms-grid-column-span: 2;
  grid-column: 4 / 6;
}

.body-background .container #third {
  -ms-grid-column: 1;
  -ms-grid-column-span: 2;
  grid-column: 1 / 3;
}

.container {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  background-color: grey;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.container .inner-container {
  width: 86%;
  display: -ms-grid;
  display: grid;
  -ms-grid-rows: 1fr;
  grid-template-rows: 1fr;
  -ms-grid-columns: (1fr)[5];
  grid-template-columns: repeat(5, 1fr);
  grid-gap: 3px;
  height: 69px;
  padding-right: 8px;
}

.container .inner-container div {
  width: 100%;
}

html,
body {
  width: calc(100%);
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

section {
  width: 100%;
}

/*# sourceMappingURL=master.css.map */

